--- a/styles.css
+++ b/styles.css
@@ -50,7 +50,9 @@ body{
   border: solid;
   border-color: hsl(205, 78%, 60%);
   border-radius: 100px;
-  width: 100%;
+  height: 160px;
+  object-fit: cover;
+  width: 160px;
   z-index: 100;
 }
 .another-circle{
